# University

./: CMakeLists.txt  README-OS.md  README.md  cs0019.c  cs0019.h  grade_report.md  hhtest.c  k-hardware.c  kernel.c  sh0019  sh0019.c  test003.c  test013.c  test014.c  test016.c  test017.c  test019.c  test022.c  test027.c  test037.c
.deps/: _sol.d  p-allocator.d  p-forkexit.d
Applied Software Development COMP103P/DriveApp Project/: login.ts
Applied Software Development COMP103P/Exercise 1/: Q1_2.java  Q1_3.java
Applied Software Development/Exercise 1/: Q1_1.java  Q1_10.java  Q1_4.java  Q1_5.java  Q1_6.java  Q1_7.java
COMP101 C/Exercises 2/: e2.10.c  e2.4  e2.9.c  example2.2  example2.3  example2.3.c  f2.1  f2.1.c  f2.2.c
COMP101 C/Exercises 3/: e3.10.c  e3.10v2  f3.1  f3.1.c  f3.3.c
COMP101 C/Exercises 4/: f4.1.c
COMP101 C/sketch_arduino/: sketch_arduino.pde
COMP101 Haskell/: LabSheet1_review.hs  LabSheet3_review.hs  LabSheet4_review.hs
COMP101/ArduinoProject/: Comp101Arduino.ino  processingcode.java
COMP101/Exercises 1/: e11  e11.c  house
COMP101/Exercises 2/: e2.10  e2.16  e2.5  e2.5.c  e2.6
COMP101/Exercises 3/: e3.10.c
CW2/: README.md  basealloc.c  check.pl  test004.c  test006.c  test007.c  test010.c  test011.c  test012.c  test020.c  test021.c  test029.c  test032.c
CW3/: README.md  grade_report.md
CW3/src/: comp0019lib.c  decomp0019.c  decomp0019.h  lzw_test.cc
CW3/test_data/: all_bases_0  all_bases_1  all_bases_6  invalid_decoder_inputs  rnd_2  rnd_6  rnd_7  rnd_8
CW4/.deps/: k-hardware.d  kernel.d  p-fork.d
CW5/: .gitignore  GNUmakefile  sh0019.h  strace.txt
Comp101 Haskell/: LabSheet1.hs  LabSheet3.hs
Design and Professional Skills/: assignment1.py
Design and Professional Skills/Second Assignment/: Exercise1.py  Exercise2.py  Exercise3.py
Engineering101/: LaunchPadCode  sketch_171211a.pde
First Year/COMP101 Haskell/: Haskell_Comp_Exams.hs  LabSheet1_review.hs  LabSheet2_review.hs  LabSheet3.hs
First Year/Engineering Challenges ENG101P/: LaunchPadCode  sketch_171211a.pde
Hackathon/: UCLAPI
Master's/: README.md
Robotics Programming COMP105P/: Task1-1.c  Task1-2.c  Task1-3.c
Second Year/: readme.md
Theory1 COMP102P/: GridHorror.py  Gridland.py  Halloween.py  Smarter_Ticket_Number_Collector.py  calcdistances.py
Third Year/: readme.md
src/: comp0019.c  comp0019.h  decode.c  decomp0019.c  encode.c  lzw_test.cc
test_data/: all_bases_4  rnd_3  rnd_5  rnd_9
(+255 files in other folders)
